
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hid_device {int dev; } ;
typedef int __u8 ;


 int dev_info (int *,char*,int) ;

__attribute__((used)) static void samsung_report_fixup(struct hid_device *hdev, __u8 *rdesc,
  unsigned int rsize)
{
 if (rsize == 184 && rdesc[175] == 0x25 && rdesc[176] == 0x40 &&
   rdesc[177] == 0x75 && rdesc[178] == 0x30 &&
   rdesc[179] == 0x95 && rdesc[180] == 0x01 &&
   rdesc[182] == 0x40) {
  dev_info(&hdev->dev, "fixing up Samsung IrDA %d byte report "
    "descriptor\n", 184);
  rdesc[176] = 0xff;
  rdesc[178] = 0x08;
  rdesc[180] = 0x06;
  rdesc[182] = 0x42;
 } else
 if (rsize == 203 && rdesc[192] == 0x15 && rdesc[193] == 0x0 &&
   rdesc[194] == 0x25 && rdesc[195] == 0x12) {
  dev_info(&hdev->dev, "fixing up Samsung IrDA %d byte report "
    "descriptor\n", 203);
  rdesc[193] = 0x1;
  rdesc[195] = 0xf;
 } else
 if (rsize == 135 && rdesc[124] == 0x15 && rdesc[125] == 0x0 &&
   rdesc[126] == 0x25 && rdesc[127] == 0x11) {
  dev_info(&hdev->dev, "fixing up Samsung IrDA %d byte report "
    "descriptor\n", 135);
  rdesc[125] = 0x1;
  rdesc[127] = 0xe;
 }
}
